--- a/게시판/css/style.css
+++ b/게시판/css/style.css
@@ -226,6 +226,10 @@ button {
   margin: 0;
 }
 
+.modal-cancle .fa-xmark {
+  font-size: 14px;
+}
+
 .modal-cancle:hover {
   background-color: rgb(120, 120, 120);
 }
@@ -263,4 +267,44 @@ button {
 
 .remove-cancle:active {
   background-color: rgb(80, 80, 80);
+}
+
+/* 컨텐츠 추가 예외처리 모달창 */
+.content-add-error {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0000007c;
+}
+
+.content-error-modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 300px;
+  height: 150px;
+  top: 38%;
+  left: 42%;
+  background-color: #eee;
+  border: 1px solid black;
+}
+
+.content-add-confirm {
+  text-align: center;
+  margin: 20px 0 0 0;
+}
+
+.content-add-error-ok {
+  border: 1px solid black;
+  border-radius: 3px;
+  color: rgb(0, 0, 0);
+  background-color: rgb(170, 170, 170);
+}
+
+.content-add-error-ok:hover {
+  background-color: rgb(150, 150, 150);
 }
