--- a/게시판/css/style.css
+++ b/게시판/css/style.css
@@ -85,6 +85,31 @@ h1 {
   display: none;
 }
 
+/*? 컨텐츠 영역 하단부분 */
+.content-wrap-footer {
+  position: relative;
+  top: 2%;
+}
+
+.pagination {
+  position: absolute;
+  left: 45%;
+  align-items: center;
+}
+
+.pagination-wrap {
+  
+}
+
+.pagination-num-wrap {
+  align-items: center;
+  margin-top: 3px;
+}
+
+.pagination-num {
+  font-weight: 400;
+}
+
 /*? 추가, 삭제버튼 스타일 영역 */
 .btn-wrap {
   display: inline;
