--- a/게시판/css/style.css
+++ b/게시판/css/style.css
@@ -87,18 +87,16 @@ h1 {
 
 /*? 컨텐츠 영역 하단부분 */
 .content-wrap-footer {
-  position: relative;
-  top: 2%;
-}
-
-.pagination {
-  position: absolute;
-  left: 45%;
-  align-items: center;
+  display: flex;
+  margin-top: 2%;
 }
 
 .pagination-wrap {
-  
+  position: absolute;
+  display: flex;
+  left: 45%;
+  flex-grow: 1;
+  text-align: center;
 }
 
 .pagination-num-wrap {
