pagination styling finish

--- a/게시판/css/style.css
+++ b/게시판/css/style.css
@@ -86,36 +86,35 @@ h1 {
 }
 
 /*? 컨텐츠 영역 하단부분 */
-/*! 수정 필요 */
 .content-wrap-footer {
   display: flex;
-  margin-top: 2%;
-  margin-left: 0;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
 }
 
 .pagination-wrap {
-  position: absolute;
   display: flex;
-  left: 45%;
+  align-items: center;
+  justify-content: center;
   flex-grow: 1;
-  text-align: center;
+  margin-right: 20px;
+
 }
 
 .pagination-num-wrap {
-  align-items: center;
-  margin-top: 3px;
+  text-align: center;
 }
 
 .pagination-num {
-  font-weight: 400;
+  white-space: nowrap;
 }
 
 /*? 추가, 삭제버튼 스타일 영역 */
 .btn-wrap {
   display: inline;
   position: relative;
-  top: 2%;
-  left: 87%;
+  margin-right: 10px;
 }
 
 button {
