main sction css add

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -35,5 +35,20 @@ element {
 }
 
 /*? main section */
+.home {
+  
+}
+
+.aboutMe {
+  
+}
+
+.project-skills {
+  
+}
+
+.contact {
+  
+}
 
 /*? footer section */
