--- a/clone-coding/반응형네비바/css/navStyle.css
+++ b/clone-coding/반응형네비바/css/navStyle.css
@@ -68,7 +68,7 @@
 }
 
 .nav-link:hover span {
-  color: white;
+  color: #eee;
 }
 
 .nav-content {
@@ -92,18 +92,63 @@
   transform: scale(1.2);
 }
 
+.nav-burger-bars {
+  display: none;
+  position: absolute;
+  top: 2%;
+  right: 3%;
+  font-size: 20px;
+  transition: 0.15s ease-in-out;
+}
+
+.nav-burger-bars:hover {
+  transform: scale(1.2);
+}
+
 @media screen and (max-width: 768px) {
   .blog-header {
+    display: flex;
+  }
+
+  .blog-logo {
+    padding-left: 15px;
+  }
+
+  .header-container {
     flex-direction: column;
     align-items: flex-start;
   }
 
+  .blog-nav {
+    width: 100%;
+    text-align: center;
+  }
+
   .nav-wrap {
     flex-direction: column;
+    align-items: center;
+    padding: 0px 10px;
   }
 
   .nav-link {
     width: 100%;
+    padding: 12px 0px;
+  }
+
+  .blog-icons-wrap {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 3px 0;
+  }
+
+  .blog-icons-wrap a {
+    display: flex;
+    align-items: center;
+  }
+
+  .nav-burger-bars {
+    display: block;
   }
 }
 
