타이핑효과 스타일링, 자바스크립트 추가 예정

--- a/clone-coding/반응형네비바/css/navStyle.css
+++ b/clone-coding/반응형네비바/css/navStyle.css
@@ -187,11 +187,11 @@
 }
 
 .typing-text {
+  position: relative;
   font-size: 2rem;
 }
 
 .main-link-text {
-  /* display: block; */
   position: relative;
   font-size: 1.5rem;
   height: auto;
@@ -204,6 +204,25 @@
 
 .main-link:hover {
   text-decoration: underline;
+}
+
+.typing-text::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  width: 4px;
+  height: 90%;
+  background-color: white;
+}
+
+.typing-text.active::after {
+  display: none;
+}
+
+#typing {
+  display: inline-block;
 }
 
 /* 푸터 영역 */
