--- a/clone-coding/반응형네비바/css/navReset.css
+++ b/clone-coding/반응형네비바/css/navReset.css
@@ -5,6 +5,10 @@
   color: black;
 }
 
+html {
+  /* scroll-behavior: smooth; */
+}
+
 html, body {
   /** 텍스트 드래그 방지 */
   user-select:none
@@ -16,4 +20,21 @@ h1, h2, h3, h4, a {
 
 ul, li {
   list-style: none;
+}
+
+/* 스크롤바 전체 */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* 스크롤바 막대 */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgb(80, 80, 80);
+  box-shadow: inset 0px 0px 7px rgb(190, 190, 190);
+}
+
+/* 스크롤바 백그라운드 */
+::-webkit-scrollbar-track {
+  background-color: rgb(141, 141, 141);
 }
