--- a/clone-coding/서울아산병원/css/reset.css
+++ b/clone-coding/서울아산병원/css/reset.css
@@ -1,7 +1,20 @@
+.noto-sans-kr {
+  font-family: "Noto Sans KR", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Noto Sans KR", serif;
+}
+
+img {
+  padding: 0;
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5, a, ul, li {
