--- a/clone-coding/서울아산병원/css/asanStyle.css
+++ b/clone-coding/서울아산병원/css/asanStyle.css
@@ -23,10 +23,39 @@
   font-weight: 500;
 }
 
+.carousel-list-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
 .carousel-list-wrap .cell {
+  position: relative;
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+.btn-section {
+  position: absolute;
+  width: 1100px;
+  height: 100%;
+}
+
+.detail-btn {
+  position: absolute;
+  background-color: rgb(255, 180, 20);
+  top: 300px;
+  border: none;
+  width: 170px;
+  height: 40px;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  font-size: 16px;
+}
+
+.detail-btn:hover {
+  text-decoration: underline;
 }
 
 .carousel {
