--- a/clone-coding/서울아산병원/css/asanStyle.css
+++ b/clone-coding/서울아산병원/css/asanStyle.css
@@ -2,6 +2,9 @@
   display: block;
   width: 100%;
   height: 88px;
+  position: fixed;
+  background-color: white;
+  z-index: 99;
 }
 
 .nav-wrap {
@@ -21,6 +24,10 @@
   margin-left: 50px;
   font-size: 20px;
   font-weight: 500;
+}
+
+.carousel-wrap {
+  padding-top: 88px;
 }
 
 .carousel-list-wrap {
